# caranqui-yaguarshungo-kevin-fernando

./: README.md  package-lock.json  package.json
01-javascript/: 01-variables.js  02-arreglos.js  03-operadores.js  04-funciones.js  05-destructuracion.js  06-callback.js  07-promesas.js  09-json.js  (+1 more)
Examen_IIB/Backend/song_api/: .env  pyproject.toml
Examen_IIB/Backend/song_api/app/: main.py
Examen_IIB/Backend/song_api/src/Shared/: Model.py  MongoDBConnection.py  api.py  ic.py
Examen_IIB/Backend/song_api/src/Singer/Application/: AddSingerUseCase.py
Examen_IIB/Backend/song_api/src/Singer/Domain/: Singer.py  SingerFactory.py  SingerRepository.py
Examen_IIB/Backend/song_api/src/Singer/Infraestructure/: FastAPISingerController.py  MongoDBSingerRepository.py
Examen_IIB/Backend/song_api/src/Song/Application/: AddSongUseCase.py  GetSongUseCase.py  GetSongsUseCase.py
Examen_IIB/Backend/song_api/src/Song/Domain/: Song.py  SongFactory.py  SongRepository.py
Examen_IIB/Backend/song_api/src/Song/Infraestructure/: FastAPISongController.py  MongoDBSongRepository.py
ProyectoIIB/Backend/Facturacion/: pyproject.toml
ProyectoIIB/Backend/Facturacion/facturacion/: __init__.py  main.py
ProyectoIIB/Backend/Facturacion/facturacion/Controller/: BillController.py  ClientControlle.py  ProductController.py  UserController.py
ProyectoIIB/Backend/Facturacion/facturacion/DAO/: BillDAO.py  ClientDAO.py  ProductDAO.py  UserDAO.py
ProyectoIIB/Backend/Facturacion/facturacion/Models/: client.py  product.py  user.py
ProyectoIIB/Backend/Facturacion/facturacion/Utils/: Conexion.py
(+51 files in other folders)
