[tool.poetry]
name = "facturacion"
version = "0.1.0"
description = ""
authors = ["Kevin Caranqui <kevin.caranqui@epn.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
